--- a/Hook-Game/Hook-Game.vcxproj.filters
+++ b/Hook-Game/Hook-Game.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Menu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DogPlayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Menu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DogPlayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
